module_kubernetes_and_cloud_servers/Network_Security_in_Kubernetes/update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  nginx-multitool-d
  labels:
    app: multitool
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 4
      maxUnavailable: 4
  selector:
    matchLabels:
      app: multitool
  template:
    metadata:
      labels:
        app: multitool
    spec:
      containers:
      - name: nginx
        image: nginx:1.28
        ports:
        - containerPort: 80
      - name: network-multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 1180
          name: http-port
#          kubectl exec multitool -- env
