module_kubernetes_and_cloud_servers/Network_Security_in_Kubernetes/canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: storage-depl
  labels:
    app: storage-conf
spec:
  replicas: 2
  selector:
    matchLabels:
      app: storage-conf
  template:
    metadata:
      labels:
        app: storage-conf
    spec:
      containers:
      - name: nginx-latest
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-index-file-1
          mountPath: /usr/share/nginx/html/
      volumes:
      - name: nginx-index-file-1
        configMap:
          name: index-html-cm-v1
      - name: nginx-1-20
        image: nginx:1.20
        ports:
        - containerPort: 81
        volumeMounts:
        - name: nginx-index-file-2
          mountPath: /etc/nginx/conf
      volumes:
      - name: nginx-index-file-2
        configMap:
          name: index-html-cm-v2
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-backend-svc
spec:
  selector:
    app: ks
  ports:
  type: ClusterIP
  ports:
  - port: 1111
    targetPort: 80
    name: nginx-v1
  - port: 2222
    targetPort: 81
    name: nginx-v2
---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: netology-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
#spec:
#  rules:
#  - host: micro.ru-central1.internal
#    http:
#      paths:
#      - path: /v1
#        pathType: Prefix
#        backend:
#          service:
#            name: frontend-backend-svc
#            port:
#              name: nginx-v1
#      - path: /v2
#        pathType: Prefix
#        backend:
#          service:
#            name: frontend-backend-svc
#            port:
#              name: nginx-v2
