module_kubernetes_and_cloud_servers/Network_Security_in_Kubernetes/kubernetes_nw.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: app
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: network-multitool-1
        image: wbitt/network-multitool
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: app
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: network-multitool-2
        image: wbitt/network-multitool
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache
  namespace: app
  labels:
    app: cache
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - name: network-multitool-3
        image: wbitt/network-multitool
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: frontend
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    name: frontend
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: backend
spec:
  selector:
    app: backend
  ports:
  - port: 80
    name: backend
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: cache
spec:
  selector:
    app: cache
  ports:
  - port: 80
    name: cache

#    kubectl expose deployment/nginx-multitool-deployment - название deployment
#    kubectl describe svc nginx-multitool-deployment

# Running the multitool on Kubernetes using the POD network is as simple as:
# kubectl run nginx-multi-network-task1-p --image wbitt/network-multitool
#  kubectl exec --stdin --tty nginx-multi-network-task1-p -- /bin/bash
