module_kubernetes_and_cloud_servers/Network_Security_in_Kubernetes/policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: frontend # сетевая политика применяется к любому поду с меткой app: frontend
  policyTypes:
    - Ingress # входящий (ingress) трафик не разрешен
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: from-frontend-to-backend
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: backend # сетевая политика применяется к любому поду с меткой app: backend
  policyTypes:
    - Ingress
  ingress: #определяет разрешенный входящий трафик в целевые pod'ы
    - from:
        - podSelector:
            matchLabels:
              app: frontend  # входящий (ingress) трафик разрешен только из подs с меткой app: frontend
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: from-backend-to-cache
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: cache
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: backend # входящий (ingress) трафик разрешен только от подs с меткой app: backend
