module_kubernetes_and_cloud_servers/Network_Security_in_Kubernetes/task.yaml
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: web-consumer
#  namespace: web
#spec:
#  replicas: 2
#  selector:
#    matchLabels:
#      app: web-consumer
#  template:
#    metadata:
#      labels:
#        app: web-consumer
#    spec:
#      containers:
#      - command:
#        - sh
#        - -c
#        - while true; do curl auth-db; sleep 5; done
#        image: radial/busyboxplus:curl
#        name: busybox
#---
#apiVersion: apps/v1
#kind: Deployment
#metadata:
#  name: auth-db
#  namespace: data
#spec:
#  replicas: 1
#  selector:
#    matchLabels:
#      app: auth-db
#  template:
#    metadata:
#      labels:
#        app: auth-db
#    spec:
#      containers:
#      - image: nginx:1.19.1
#        name: nginx
#        ports:
#        - containerPort: 80
#          protocol: TCP
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: auth-db
#  namespace: data
#spec:
#  ports:
#  - port: 80
#    protocol: TCP
#    targetPort: 80
#  selector:
#    app: auth-db
#---
---
apiVersion: v1
kind: Service
metadata:
  name: web-consumer
  namespace: web
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: web-consumer
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: from-web-consumer-to-auth-db
  namespace: web
spec:
  podSelector:
    matchLabels:
      app: auth-db # сетевая политика применяется к любому поду с меткой app: auth-db
  policyTypes:
    - Ingress
  ingress: #определяет разрешенный входящий трафик в целевые pod'ы
    - from:
        - podSelector:
            matchLabels:
              app: web-consumer  # входящий (ingress) трафик разрешен только из подs с меткой app: web-consumer

#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: web-consumer
#  namespace: web
#spec:
#  ports:
#  - port: 80
#    protocol: TCP
#    targetPort: 80
#  selector:
#    app: web-consumer
#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: slice-svc
#  namespace: test-main
#spec:
#  ports:
#  - port: 80
#    name: http
#    targetPort: 80
#  clusterIP: None
#---
#kind: Endpoints
#apiVersion: v1
#metadata:
#  name: slice-svc
#  namespace: test-main
#subsets:
#  - addresses:
#      - ip: 10.233.6.192 #CluserIP of service auth-db from namespace data
#      - ip: 10.233.18.69 #CluserIP of service web-consumer from namespace web
#    ports:
#      - port: 80
